[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
protocol = { path = "../protocol" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-tungstenite = "0.23"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"
uuid.workspace = true
