[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = { version = "0.7", features = ["ws", "http1", "tokio"] }
bytes.workspace = true
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures-util = "0.3"
http-body-util = "0.1"
protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
